Agregar site_domain a la configuración de Netlify CMS
Se configuró la propiedad site_domain en admin/config.yml para especificar el dominio de implementación para Netlify CMS.

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: github
   repo: Alexis14jara/blog
   branch: main
+  site_domain: novinhodev.netlify.app
 
 media_folder: "assets/images/uploads"
 public_folder: "/assets/images/uploads"
